# US_Weather

./: .gitignore  LICENSE  README.md  setup.cfg
src/: us_weather.py  weather_forecast.md  wformat.py  wquery.py
src/us_weather_MichaelC03.egg-info/: PKG-INFO  SOURCES.txt
