[metadata]
name = us-weather-MichaelC03
version = 0.0.1
author = Michael Cheng
author_email = michael.cheng@metrics.ca
description = Retrieves weather information of a city located in the United States
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichaelC03/US_Weather
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src